@@ -28,3 +28,4 @@
 2016-12-23	--	v0.8.2	-- Debian packaging fix
 2016-12-23	--	v0.8.3	-- Small improvment to allow easier update
 2016-12-29	--	v0.8.4	-- Small addon
+2017-01-03	--	v0.9.0	-- Removed examples from standard job file. Minor fixes. Better task logging.
